# Simulations

./: .boring  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  Makefile.am  NEWS  OldDoc.txt  README  README.markdown  README.md  README.org  README.rst  SConscript  SConstruct  Simulations.sublime-project  antti.py  autogen.sh  conan.conf  conanfile.txt  configure.ac  didier.py  doxygen.cfg  graph.hs  hypermaps.json  hypermaps.yaml  meson.build  notes.org  pslq-1.0.c  pslq.cpp  pyproject.toml  waf  wscript
.github/workflows/: ccpp.yml  ccpp.yml.disabled
1D/: Bernoulli_IT.cpp  Bernoulli_IT_2.cpp  BiTree.cpp  CMakeLists.txt  Contact.cpp  Contact_1D.cpp  Cookie.cpp  Diploid.cpp  Erwan.cpp  Fred.cpp  Gacs5.cpp  Ladder.cpp  Makefile.am  PingPong.cpp  Population.cpp  RFIM.cpp  Rancher.cpp  Rarefaction.c  Rarefaction.cpp  SConscript  Stick-Perco.c  Stick-Perco.cpp  TASEP.cpp  meson.build  wscript
2D/: 2SF.cpp  AIFlogo.cpp  AgingCP.cpp  Arctic.cpp  BF.cpp  Belyi_Sphere.cpp  Belyi_Torus.cpp  Bouncy.cpp  CMakeLists.txt  Contact-hex.cpp  Contact.cpp  Corrector.cpp  Coupling-perco.cpp  DAC.cpp  DDLA.cpp  DLA.cpp  DivisibleSandpile.cpp  Domino.cpp  Domino2.cpp  ERW.cpp  FCBM.cpp  FPP.cpp  Gacs5.cpp  Geodesic.cpp  Glass.cpp  Glauber0.cpp  IDLA.cpp  Ising-bis.cpp  Ising-cftp.cpp  Ising.cpp  LERW.cpp  LPP.cpp  MB.cpp  MDLA.cpp  Makefile.am  Mesoscopic.cpp  Mirrors.cpp  Nematic.cpp  Once.cpp  PercSEP.cpp  (+49 more)
2D/disabled/: Coupling-perco.cpp  Ising-cftp.cpp  Perco-bond-asym.cpp  Pivot.cpp
3D/: CMakeLists.txt  Ising3.cpp  Prudent3.cpp  SRW3.cpp  meson.build  wscript
asymptote/: perc.asy
catch2/: Array.cpp  Bitmap.cpp  CL_Parser.cpp  CMakeLists.txt  Color.cpp  Coloring.cpp  Constellation0.cpp  Constellation1.cpp  Cube.cpp  Figure.cpp  HLib.cpp  LinearAlgebra.cpp  Minimizer.cpp  Permutation.cpp  ProgressBar.cpp  TriMatrix.cpp  coo.cpp  math.cpp  meson.build
conan/: fltk.py  fplll.py  libcmaes.py  yaml-cpp.py
data/: pslq.txt
geom/: SConscript  geodesic.cpp  square.cpp  wscript
include/vb/: Auto.h  AutoWindow.h  Automaton.h  Bitmap.h  Cluster.h  CoarseImage.h  Color.h  Coloring.h  Console.h  Constellation.h  Constellation0.h  Constellation1.h  Cube.h  Elliptic.h  Figure.h  Hub.h  Hypermap.h  Hypermap_lib.h  Lattice.h  LinearAlgebra.h  Map.h  Minimizer.h  NumberTheory.h  PRNG.h  Path.h  Picture.h  Point.h  Polynomial.h  Pov.h  ProgressBar.h  QuadTree.h  Ranges.h  Shape.h  Sphere.h  Spheroidal.h  Stream.h  Stream_lib.h  Toroidal.h  cpx.h  math.h  (+3 more)
include/vb/data/: Array.h  Pairings.h  Permutation.h  Queue.h  TriMatrix.h
include/vb/impl/: Constellation.hxx  Constellation0.hxx  Constellation1.hxx  Elliptic.hxx  LinearAlgebra.hxx  Minimizer.hxx
include/vb/math/: LinearAlgebra.h  NumberTheory.h  Pairings.h  Permutation.h  Polynomial.h  math.h
include/vb/util/: CLP.h  CL_Parser.h  Hub.h  PRNG.h  Stream.h  Stream_lib.h  coo.h  cpx.h  format.h  misc.h  mp.h
libvb/: Auto.cpp  AutoWindow.cpp  Bitmap.cpp  CLP.cpp  CL_Parser.cpp  CMakeLists.txt  Clock.cpp  Cluster.cpp  CoarseImage.cpp  Color.cpp  Coloring.cpp  Console.cpp  Constellation.cpp  Constellation0.cpp  Constellation1.cpp  Cube.cpp  Elliptic.cpp  Figure.cpp  Globals.cpp  Hub.cpp  Hypermap.cpp  Hypermap_lib.cpp  Image.cpp  Lattice.cpp  LinearAlgebra.cpp  Makefile.am  Map.cpp  Matrix.cpp  MatrixStorage.cpp  Minimizer.cpp  NumberTheory.cpp  PRNG.cpp  PSLQ.cpp  Pairings.cpp  Path.cpp  Permutation.cpp  Picture.cpp  Polynomial.cpp  Pov.cpp  ProgressBar.cpp  (+32 more)
libvb/fix/: apply.hpp
libvb/vb/: Array.h  Auto.h  AutoWindow.h  Automaton.h  Bitmap.h  CL_Parser.h  Clock.h  Cluster.h  CoarseImage.h  Color.h  Coloring.h  Console.h  Constellation.h  Constellation0.h  Constellation0_impl.h  Constellation1.h  Constellation1_impl.h  Constellation_impl.h  Cube.h  Elliptic.h  Elliptic_impl.h  Figure.h  Generator.h  Globals.h  Hub.h  Hypermap.h  Hypermap_lib.h  Image.h  Lattice.h  LinearAlgebra.h  Map.h  Matrix.h  MatrixStorage.h  Minimizer.h  NumberTheory.h  NumberTheory_impl.h  PRNG.h  Pairings.h  Path.h  PerioGraph.h  (+39 more)
libvb/vb/impl/: Constellation.hxx  Constellation0.hxx  Constellation1.hxx  Elliptic.hxx  LinearAlgebra.hxx  Minimizer.hxx  NumberTheory.hxx  Polynomial.hxx  ThreadPool.hxx
playground/: benchmark.cpp  boost_eigen.cpp  glfw.cpp  mp.cpp  phoenix.cpp  ranges.cpp  rtask.cpp  sqlite.cpp  task2.cpp  threadpool.cpp  variant.cpp
scripts/: SRW.py
subprojects/: docopt.wrap
tests/: CMakeLists.txt  SConscript  bug.cpp  clp.cpp  doctest.cpp  elliptic_functions.cpp  figtest.cpp  mandelbrot.cpp  maptest.cpp  mattest.cpp  meson.build  mintest.cpp  periotest.cpp  range_coro.cpp  realtest.cpp  sample.cpp  shuffle.cpp  std_range.cpp  test_c++0x.cpp  test_c++11.cpp  test_cln.cpp  test_cluster.cpp  test_color.cpp  test_console.cpp  test_coroutine.cpp  test_coroutine2.cpp  test_cp.cpp  test_cube.cpp  test_docopt.cpp  test_elliptic.cpp  test_figure.cpp  test_fplll.cpp  test_hypermap.cpp  test_lattice.cpp  test_linearalgebra.cpp  test_logging.cpp  test_map.cpp  test_math.cpp  test_minimizer.cpp  test_mp.cpp  (+12 more)
tools/: cov.sh  fit.gnuplot  graph.hs  graph.py  massage-box.py  massage.py  mc_auto.py  merge  prof.py  run.py  toto  vb.py  waf
trucs/: Makefile.am  SConscript  embed.cc  interpol-asym-2.cc  interpol-asym.cc  interpol.cc  inv257.c  inv257.cc  seq.c
windows/: Makefile.am  README.win
xtoys/: Makefile.am  SConscript  readme.txt  schrodinger.c  wscript  xautomalab.c  xautomalab.txt  xfires.c  xfires.txt  xising.c  xising.txt  xpotts.c  xpotts.txt  xsand.c  xsand.txt  xtoys.1  xtoys.html  xwaves.c  xwaves.txt
