add_executable (Bernoulli_IT Bernoulli_IT.cpp)
add_executable (Contact_1D Contact_1D.cpp)
add_executable (Cookie Cookie.cpp)
add_executable (Diploid Diploid.cpp)
add_executable (Fred Fred.cpp)
add_executable (Gacs5 Gacs5.cpp)
add_executable (Ladder Ladder.cpp)
add_executable (PingPong PingPong.cpp)
add_executable (Population Population.cpp)
add_executable (RFIM RFIM.cpp)
add_executable (Rarefaction Rarefaction.cpp)
add_executable (TASEP TASEP.cpp)