executable ('Bernoulli_IT', 'Bernoulli_IT.cpp', dependencies : libvb)
executable ('Contact_1D', 'Contact_1D.cpp', dependencies : libvb)
executable ('Cookie', 'Cookie.cpp', dependencies : libvb)
executable ('Diploid', 'Diploid.cpp', dependencies : libvb)
executable ('Fred', 'Fred.cpp', dependencies : libvb)
executable ('Gacs5', 'Gacs5.cpp', dependencies : libvb)
executable ('Ladder', 'Ladder.cpp', dependencies : libvb)
executable ('PingPong', 'PingPong.cpp', dependencies : libvb)
executable ('Population', 'Population.cpp', dependencies : libvb)
executable ('Rarefaction', 'Rarefaction.cpp', dependencies : libvb)
executable ('RFIM', 'RFIM.cpp', dependencies : libvb)
executable ('TASEP', 'TASEP.cpp', dependencies : libvb)