add_executable(2SF 2SF.cpp)
add_executable(AIFlogo AIFlogo.cpp)
add_executable(AgingCP AgingCP.cpp)
add_executable(Belyi_Sphere Belyi_Sphere.cpp)
add_executable(Belyi_Torus Belyi_Torus.cpp)
add_executable(BF BF.cpp)
add_executable(Contact-hex Contact-hex.cpp)
add_executable(Contact Contact.cpp)
add_executable(Corrector Corrector.cpp)
add_executable(Coupling-perco Coupling-perco.cpp)
add_executable(DAC DAC.cpp)
add_executable(DDLA DDLA.cpp)
add_executable(DLA DLA.cpp)
add_executable(DivisibleSandpile DivisibleSandpile.cpp)
add_executable(Domino Domino.cpp)
add_executable(Domino2 Domino2.cpp)
add_executable(FCBM FCBM.cpp)
add_executable(FPP FPP.cpp)
add_executable(Geodesic Geodesic.cpp)
add_executable(Glass Glass.cpp)
add_executable(Glauber0 Glauber0.cpp)
add_executable(IDLA IDLA.cpp)
add_executable(Ising-bis Ising-bis.cpp)
add_executable(Ising-cftp Ising-cftp.cpp)
add_executable(Ising Ising.cpp)
add_executable(LERW LERW.cpp)
add_executable(LPP LPP.cpp)
add_executable(MB MB.cpp)
add_executable(MDLA MDLA.cpp)
add_executable(Mesoscopic Mesoscopic.cpp)
add_executable(Mirrors Mirrors.cpp)
add_executable(Nematic Nematic.cpp)
add_executable(Once Once.cpp)
add_executable(PercSEP PercSEP.cpp)
add_executable(Perco-Arms Perco-Arms.cpp)
add_executable(Perco-Schramm Perco-Schramm.cpp)
add_executable(Perco-facet Perco-facet.cpp)
add_executable(Perco-grad Perco-grad.cpp)
add_executable(Perco Perco.cpp)
add_executable(Pivot Pivot.cpp)
add_executable(Potts Potts.cpp)
add_executable(Prudent Prudent.cpp)
add_executable(RPNG RPNG.cpp)
add_executable(RWhull RWhull.cpp)
add_executable(Rancher Rancher.cpp)
add_executable(RandomPolynomial RandomPolynomial.cpp)
add_executable(Rotor Rotor.cpp)
add_executable(SAW SAW.cpp)
add_executable(SIR SIR.cpp)
add_executable(SLE SLE.cpp)
add_executable(SRW SRW.cpp)
add_executable(Sagex Sagex.cpp)
add_executable(Shuffle Shuffle.cpp)
add_executable(Snake Snake.cpp)
add_executable(Snake2 Snake2.cpp)
add_executable(Spherical Spherical.cpp)
add_executable(Square Square.cpp)
add_executable(Stuck Stuck.cpp)
add_executable(Swiss Swiss.cpp)
add_executable(TGraph TGraph.cpp)
add_executable(Triangulation Triangulation.cpp)
add_executable(UST UST.cpp)
add_executable(Voter Voter.cpp)
add_executable(Wave Wave.cpp)
add_executable(XY XY.cpp)

target_link_libraries(Geodesic FFTW3::fftw3)
