executable ('2SF', '2SF.cpp', dependencies : libvb)
executable ('AIFlogo', 'AIFlogo.cpp', dependencies : libvb)
executable ('AgingCP', 'AgingCP.cpp', dependencies : libvb)
executable ('Belyi_Sphere', 'Belyi_Sphere.cpp', dependencies : libvb)
executable ('Belyi_Torus', 'Belyi_Torus.cpp', dependencies : libvb)
executable ('Contact-hex', 'Contact-hex.cpp', dependencies : libvb)
executable ('Contact', 'Contact.cpp', dependencies : libvb)
executable ('Corrector', 'Corrector.cpp', dependencies : libvb)
executable ('Coupling-perco', 'Coupling-perco.cpp', dependencies : libvb)
executable ('DAC', 'DAC.cpp', dependencies : libvb)
executable ('DDLA', 'DDLA.cpp', dependencies : libvb)
executable ('DLA', 'DLA.cpp', dependencies : libvb)
executable ('DivisibleSandpile', 'DivisibleSandpile.cpp', dependencies : libvb)
executable ('Domino', 'Domino.cpp', dependencies : libvb)
executable ('Domino2', 'Domino2.cpp', dependencies : libvb)
executable ('FCBM', 'FCBM.cpp', dependencies : libvb)
executable ('FPP', 'FPP.cpp', dependencies : libvb)
executable ('Geodesic', 'Geodesic.cpp', dependencies : [libvb, fftw3])
executable ('Glass', 'Glass.cpp', dependencies : libvb)
executable ('Glauber0', 'Glauber0.cpp', dependencies : libvb)
executable ('IDLA', 'IDLA.cpp', dependencies : libvb)
executable ('Ising-bis', 'Ising-bis.cpp', dependencies : libvb)
executable ('Ising-cftp', 'Ising-cftp.cpp', dependencies : libvb)
executable ('Ising', 'Ising.cpp', dependencies : libvb)
executable ('LERW', 'LERW.cpp', dependencies : libvb)
executable ('LPP', 'LPP.cpp', dependencies : libvb)
executable ('MB', 'MB.cpp', dependencies : libvb)
executable ('MDLA', 'MDLA.cpp', dependencies : libvb)
executable ('Mesoscopic', 'Mesoscopic.cpp', dependencies : libvb)
executable ('Mirrors', 'Mirrors.cpp', dependencies : libvb)
executable ('Nematic', 'Nematic.cpp', dependencies : libvb)
executable ('Once', 'Once.cpp', dependencies : libvb)
executable ('PercSEP', 'PercSEP.cpp', dependencies : libvb)
executable ('Perco-Arms', 'Perco-Arms.cpp', dependencies : libvb)
executable ('Perco-Schramm', 'Perco-Schramm.cpp', dependencies : libvb)
executable ('Perco-grad', 'Perco-grad.cpp', dependencies : libvb)
executable ('Perco', 'Perco.cpp', dependencies : libvb)
executable ('Pivot', 'Pivot.cpp', dependencies : libvb)
executable ('Potts', 'Potts.cpp', dependencies : libvb)
executable ('Prudent', 'Prudent.cpp', dependencies : libvb)
executable ('RPNG', 'RPNG.cpp', dependencies : libvb)
executable ('RWhull', 'RWhull.cpp', dependencies : libvb)
executable ('Rancher', 'Rancher.cpp', dependencies : libvb)
executable ('RandomPolynomial', 'RandomPolynomial.cpp', dependencies : libvb)
executable ('Rotor', 'Rotor.cpp', dependencies : libvb)
executable ('SAW', 'SAW.cpp', dependencies : libvb)
executable ('SIR', 'SIR.cpp', dependencies : libvb)
executable ('SLE', 'SLE.cpp', dependencies : libvb)
executable ('SRW', 'SRW.cpp', dependencies : libvb)
executable ('Sagex', 'Sagex.cpp', dependencies : libvb)
executable ('Shuffle', 'Shuffle.cpp', dependencies : libvb)
executable ('Snake', 'Snake.cpp', dependencies : libvb)
executable ('Snake2', 'Snake2.cpp', dependencies : libvb)
executable ('Spherical', 'Spherical.cpp', dependencies : libvb)
executable ('Square', 'Square.cpp', dependencies : libvb)
executable ('Stuck', 'Stuck.cpp', dependencies : libvb)
executable ('Swiss', 'Swiss.cpp', dependencies : libvb)
executable ('TGraph', 'TGraph.cpp', dependencies : libvb)
executable ('Triangulation', 'Triangulation.cpp', dependencies : libvb)
executable ('UST', 'UST.cpp', dependencies : libvb)
executable ('Voter', 'Voter.cpp', dependencies : libvb)
executable ('Wave', 'Wave.cpp', dependencies : libvb)
executable ('XY', 'XY.cpp', dependencies : [libvb, docopt])
