add_executable(clp clp.cpp)
add_executable(elliptic_functions elliptic_functions.cpp)
add_executable(mandelbrot mandelbrot.cpp)
add_executable(std_range std_range.cpp)
add_executable(test_console test_console.cpp)
add_executable(test_coroutine test_coroutine.cpp)
add_executable(test_cp test_cp.cpp)
add_executable(test_docopt test_docopt.cpp)
add_executable(test_elliptic test_elliptic.cpp)
add_executable(test_fplll test_fplll.cpp)
add_executable(test_hypermap test_hypermap.cpp)
add_executable(test_linearalgebra test_linearalgebra.cpp)
add_executable(test_logging test_logging.cpp)
add_executable(test_mp test_mp.cpp)
add_executable(test_parallel test_parallel.cpp)
add_executable(test_permutation test_permutation.cpp)
add_executable(test_prng test_prng.cpp)
