executable ('clp', 'clp.cpp', dependencies : libvb)
executable ('elliptic_functions', 'elliptic_functions.cpp', dependencies : libvb)
executable ('mandelbrot', 'mandelbrot.cpp', dependencies : libvb)
executable ('range_coro', 'range_coro.cpp', dependencies : libvb)
executable ('test_console', 'test_console.cpp', dependencies : libvb)
executable ('test_coroutine', 'test_coroutine.cpp', dependencies : libvb)
executable ('test_cp', 'test_cp.cpp', dependencies : libvb)
executable ('test_docopt', 'test_docopt.cpp', dependencies : [libvb, docopt])
executable ('test_elliptic', 'test_elliptic.cpp', dependencies : libvb)
executable ('test_fplll', 'test_fplll.cpp', dependencies : libvb)
executable ('test_hypermap', 'test_hypermap.cpp', dependencies : libvb)
executable ('test_linearalgebra', 'test_linearalgebra.cpp', dependencies : libvb)
executable ('test_logging', 'test_logging.cpp', dependencies : libvb)
executable ('test_mp', 'test_mp.cpp', dependencies : libvb)
executable ('test_parallel', 'test_parallel.cpp', dependencies : libvb)
executable ('test_permutation', 'test_permutation.cpp', dependencies : libvb)
executable ('test_prng', 'test_prng.cpp', dependencies : libvb)
